# nix-script

./: .gitignore  CHANGELOG.md  CHANGELOG.org  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  nix.yml  update_nix.yml
directives/: Cargo.toml
directives/src/: expr.rs
nix-script/: Cargo.toml
nix-script-directives/: Cargo.toml
nix-script-directives/src/: expr.rs  lib.rs  parser.rs
nix-script-haskell/: Cargo.toml
nix-script-haskell/src/: main.rs  opts.rs
nix-script/src/: builder.rs  derivation.rs  main.rs  opts.rs
nix-script/src/derivation/: mod.rs
