[package]
name = "nix-script-haskell"
version = "3.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = [ "std", "color", "suggestions", "derive", "cargo", "env" ] }
nix-script-directives = { path = "../nix-script-directives" }
log = "0.4.27"
env_logger = "0.11.6"

[dev-dependencies]
assert_cmd = "2.0.16"
