[package]
name = "nix-script"
version = "3.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = [ "std", "color", "suggestions", "derive", "cargo", "env" ] }
directories = "5.0.1"
env_logger = "0.11.5"
fs2 = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
nix-script-directives = { path = "../nix-script-directives" }
once_cell = "1.19.0"
path-absolutize = "3.1.1"
seahash = "4.1.0"
serde_json = "1.0.127"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
rnix = "0.11.0"
tempfile = "3.12.0"
