[package]
name = "nix-script"
version = "3.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = [ "std", "color", "suggestions", "derive", "cargo", "env" ] }
directories = "6.0.0"
env_logger = "0.11.6"
fs2 = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
nix-script-directives = { path = "../nix-script-directives" }
once_cell = "1.20.2"
path-absolutize = "3.1.1"
seahash = "4.1.0"
serde_json = "1.0.137"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
rnix = "0.12.0"
tempfile = "3.15.0"
